tests/outref/TAK02.ref

-- single quotes column alias
select id as 'quoted' from names;
select id as 'ali.co' from names;
select id as 'ab12_' from names;
select id as 'ab12_.asdf' from names;
select ida from (select 8 as 'IDA','ey' as firstname, '' as lastname)n1;

-- single quoted table alias
select id from names as 'N1';
select n1.id from names as 'N1';
select lastName from names group by lastName having exists (select alias1.lastName from names as 'ALIAS1' group by alias1.lastName);
select * from names n1 natural join names as 'longeralias';
select 1 from names as 'N1' inner join (select n2.id from names as 'N2' where n2.id = 1 OR n2.id = 2) as 'ALIAS2' ON (n1.id = alias2.id ) inner join names as 'N3' ON (n1.id = n3.id);

-- shorthand alias --
-- single quotes column alias
select id 'quoted' from names;
select ida from (select 8 'ida','ey' as firstname, '' as lastname)n1;

-- single quoted table alias
select id from names 'N1';
select n1.id from names 'N1';
select lastName from names group by lastName having exists (select alias1.lastName from names 'ALIAS1' group by alias1.lastName);
select * from names n1 natural join names 'longeralias';
select 1 from names 'N1' inner join (select n2.id from names 'N2' where n2.id = 1 OR n2.id = 2) 'ALIAS2' ON (n1.id = alias2.id ) inner join names 'N3' ON (n1.id = n3.id);

-- mixed usage of shortform, quoted and identifier alias usage
select 1 from names as 'N1' inner join (select n2.id from names "N2" where n2.id = 1 OR n2.id = 2) alias2 ON (n1.id = alias2.id ) inner join names as n3 ON (n1.id = n3.id);

-- NULL table alias usage
select id from (select 1 as id);
select ida from (select 1 as "ida");
select ida from (select 1 as 'IDA');
LINE 2:1: select id as 'quoted' from names;
                       ^^^^^^^^
syntax error, unexpected LITERAL
OCTO> select id as 'quoted' from names;
LINE 3:1: select id as 'ali.co' from names;
                       ^^^^^^^^
syntax error, unexpected LITERAL
OCTO> select id as 'ali.co' from names;
LINE 4:1: select id as 'ab12_' from names;
                       ^^^^^^^
syntax error, unexpected LITERAL
OCTO> select id as 'ab12_' from names;
LINE 5:1: select id as 'ab12_.asdf' from names;
                       ^^^^^^^^^^^^
syntax error, unexpected LITERAL
OCTO> select id as 'ab12_.asdf' from names;
LINE 6:1: select ida from (select 8 as 'IDA','ey' as firstname, '' as las...
                                       ^^^^^
syntax error, unexpected LITERAL
OCTO> select ida from (select 8 as 'IDA','ey' as firstname, '' as lastname)n1;
LINE 8:1: select id from names as 'N1';
                                  ^^^^
syntax error, unexpected LITERAL
OCTO> select id from names as 'N1';
LINE 9:1: select n1.id from names as 'N1';
                                     ^^^^
syntax error, unexpected LITERAL
OCTO> select n1.id from names as 'N1';
LINE 10:1: ...lias1.lastName from names as 'ALIAS1' group by alias1.lastName);
                                           ^^^^^^^^
syntax error, unexpected LITERAL
OCTO> select lastName from names group by lastName having exists (select alias1.lastName from names as 'ALIAS1' group by alias1.lastName);
LINE 11:1: select * from names n1 natural join names as 'longeralias';
                                                        ^^^^^^^^^^^^^
syntax error, unexpected LITERAL
OCTO> select * from names n1 natural join names as 'longeralias';
LINE 12:1: select 1 from names as 'N1' inner join (select n2.id from names ...
                                  ^^^^
syntax error, unexpected LITERAL
OCTO> select 1 from names as 'N1' inner join (select n2.id from names as 'N2' where n2.id = 1 OR n2.id = 2) as 'ALIAS2' ON (n1.id = alias2.id ) inner join names as 'N3' ON (n1.id = n3.id);
LINE 14:1: select id 'quoted' from names;
                     ^^^^^^^^
syntax error, unexpected LITERAL, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
OCTO> select id 'quoted' from names;
LINE 15:1: select ida from (select 8 'ida','ey' as firstname, '' as lastna...
                                     ^^^^^
syntax error, unexpected LITERAL, expecting EXCEPT or UNION or RIGHT_PAREN
OCTO> select ida from (select 8 'ida','ey' as firstname, '' as lastname)n1;
LINE 17:1: select id from names 'N1';
                                ^^^^
syntax error, unexpected LITERAL, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
OCTO> select id from names 'N1';
LINE 18:1: select n1.id from names 'N1';
                                   ^^^^
syntax error, unexpected LITERAL, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
OCTO> select n1.id from names 'N1';
LINE 19:1: ...t alias1.lastName from names 'ALIAS1' group by alias1.lastName);
                                           ^^^^^^^^
syntax error, unexpected LITERAL, expecting EXCEPT or UNION or RIGHT_PAREN
OCTO> select lastName from names group by lastName having exists (select alias1.lastName from names 'ALIAS1' group by alias1.lastName);
LINE 20:1: select * from names n1 natural join names 'longeralias';
                                                     ^^^^^^^^^^^^^
syntax error, unexpected LITERAL, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
OCTO> select * from names n1 natural join names 'longeralias';
LINE 21:1: select 1 from names 'N1' inner join (select n2.id from names 'N2...
                               ^^^^
syntax error, unexpected LITERAL, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
OCTO> select 1 from names 'N1' inner join (select n2.id from names 'N2' where n2.id = 1 OR n2.id = 2) 'ALIAS2' ON (n1.id = alias2.id ) inner join names 'N3' ON (n1.id = n3.id);
LINE 23:1: select 1 from names as 'N1' inner join (select n2.id from names ...
                                  ^^^^
syntax error, unexpected LITERAL
OCTO> select 1 from names as 'N1' inner join (select n2.id from names "N2" where n2.id = 1 OR n2.id = 2) alias2 ON (n1.id = alias2.id ) inner join names as n3 ON (n1.id = n3.id);
OCTO> select id from (select 1 as id);
id
1
(1 row)
OCTO> select ida from (select 1 as "ida");
ida
1
(1 row)
LINE 27:1: select ida from (select 1 as 'IDA');
                                        ^^^^^
syntax error, unexpected LITERAL
OCTO> select ida from (select 1 as 'IDA');
OCTO> 
